[package]
name = "dns-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"          # error handling
bytes = "1.3.0"            # helps manage buffers
thiserror = "1.0.38"
nom = "7.1.3"              # parsing
rand = "0.8.5"             # randomness
tokio = { version = "1.34.0", features = ["rt", "macros", "net", "sync", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.4.8", features = ["derive"] }
