[package]
name = "dns-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
thiserror = "1.0.38"
nom = "7.1.3"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["rt", "macros", "net", "sync", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.4.8", features = ["derive"] }
console-subscriber = { version = "0.2.0", optional = true }

[features]
default = []
tokio_debug = ["dep:console-subscriber"]
